# Heterodyning-in-time-domain

./: .gitignore  README.md  notes.md  pyproject.toml
ACF_noise_and_covariance_matrix_data/: ACF_and_noise.ipynb  ACF_and_noise_XG_detectors.ipynb  Compute_generic_solver.py  Compute_x_and_y.py  Make_psd_file.py  Noise.py  covariance_solver.py  x_and_y_2_sec.pkl
ACF_noise_and_covariance_matrix_data/Covariance matrix/: Inv_circulant_cov_matrix_for_ET_and_CE.py  Inv_circulant_cov_matrix_using_psd.py  Inv_cov_matrix_using_psd.py
Examples/: Exact_PE.py  PE_relative_binning_22_mode_H1_time.py
Notebooks/: .distance_marginalization_lookup.npz  Comparison_between_relbin_and_exact_log_likelihood.ipynb  Time_dependent_antenna_patterns.ipynb
Notebooks/.ipynb_checkpoints/: 170817-checkpoint.ipynb  Bisect_Bins-checkpoint.ipynb  Bisect_bins_2-checkpoint.ipynb  Comparison_between_relbin_and_exact_log_likelihood-ET-checkpoint.ipynb  Comparison_between_relbin_and_exact_log_likelihood-checkpoint.ipynb  Comparison_between_relbin_and_exact_log_likelihood_new_code-checkpoint.ipynb  Comparison_between_relbin_and_exact_log_likelihood_sampling_geocent_time-checkpoint.ipynb  Exact_using_fft-checkpoint.ipynb  GW150914-Copy1-checkpoint.ipynb  GW150914-checkpoint.ipynb  GW150914_ringdown-checkpoint.ipynb  (+14 more)
Relative_binning_class/: Exact_H1_frame.py  Exact_geocent_time.py  Relative_22_H1_frame.py  Relative_22_geocent_time.py  base.py  exact.py  relative_binning.py
scripts/: build_lal_wheels.sh
tests/: conftest.py  test_covariance_solver.py  test_likelihood.py  test_math.py
